--- a/composer.json
+++ b/composer.json
@@ -7,11 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "cloudinary-labs/cloudinary-laravel": "^3.0",
         "filament/filament": "3.3",
         "filament/infolists": "3.3",
         "laravel/framework": "^12.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.10.1"
+        "laravel/sanctum": "^4.1",
+        "laravel/tinker": "^2.10.1",
+        "spatie/laravel-route-discovery": "^1.3"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
