--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^12.0",
         "laravel/sanctum": "^4.1",
         "laravel/tinker": "^2.10.1",
+        "spatie/laravel-route-attributes": "^1.25",
         "spatie/laravel-route-discovery": "^1.3"
     },
     "require-dev": {
